Fix jvm options
Many unsupported jvm options for my current one.